[shenker/snakenbake] As used on 210307 to make basilisk wafer.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -152,7 +152,8 @@
     "    port_radius=750 / 2,\n",
     "    # port_radius=0,\n",
     "    port=False,\n",
-    "    #     registration_marks=True,\n",
+    "    registration_marks=True,\n",
+    "    registration_mark_barcodes=False,\n",
     "    #     chip_id=0,\n",
     "    #     mark_size=2,\n",
     "    #     mark_spacing=1.5,\n",
@@ -182,55 +183,42 @@
     "    \"horizontal_margin\",\n",
     "    \"gap_lanes\",\n",
     ")\n",
-    "params = [\n",
-    "    dict(\n",
-    "        manifold_input_style=\"u-turn\",\n",
-    "        feeding_channel_width=30,\n",
-    "        trench_length=20,\n",
-    "        trench_gap=20,\n",
-    "        lanes_per_snake=3,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
-    "    #     dict(\n",
-    "    #         manifold_input_style=\"u-turn\",\n",
-    "    #         feeding_channel_width=40,\n",
-    "    #         trench_length=25,\n",
-    "    #         trench_gap=15,\n",
-    "    #         lanes_per_snake=3,\n",
-    "    #         trench_spacing=2.1,\n",
-    "    #     ),\n",
-    "    dict(\n",
-    "        feeding_channel_width=40,\n",
-    "        trench_gap=20,\n",
-    "        lanes_per_snake=3,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
-    "    dict(\n",
-    "        feeding_channel_width=65,\n",
-    "        trench_gap=30,\n",
-    "        # trench_length=35,\n",
-    "        lanes_per_snake=5,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
-    "    dict(\n",
-    "        feeding_channel_width=90,\n",
-    "        trench_gap=30,\n",
-    "        lanes_per_snake=5,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
-    "    dict(\n",
-    "        feeding_channel_width=90,\n",
-    "        trench_gap=30,\n",
-    "        lanes_per_snake=5,\n",
-    "        trench_spacing=2.1,\n",
-    "    ),\n",
-    "    dict(\n",
-    "        feeding_channel_width=90,\n",
-    "        trench_gap=30,\n",
-    "        lanes_per_snake=5,\n",
-    "        trench_spacing=5.1,\n",
-    "    ),\n",
-    "]\n",
+    "\n",
+    "# dense_chip = dict(\n",
+    "#     manifold_input_style=\"u-turn\",\n",
+    "#     feeding_channel_width=30,\n",
+    "#     trench_length=30,\n",
+    "#     trench_gap=20,\n",
+    "#     lanes_per_snake=3,\n",
+    "#     trench_spacing=2.1,\n",
+    "# )\n",
+    "dense_chip = dict(\n",
+    "    feeding_channel_width=40,\n",
+    "    trench_gap=20,\n",
+    "    lanes_per_snake=3,\n",
+    "    trench_spacing=2.1,\n",
+    ")\n",
+    "# dense_chip2 = dict(\n",
+    "#     feeding_channel_width=35,\n",
+    "#     trench_gap=20,\n",
+    "#     lanes_per_snake=3,\n",
+    "#     trench_spacing=2.1,\n",
+    "# )\n",
+    "workhorse = dict(\n",
+    "    feeding_channel_width=90,\n",
+    "    trench_gap=30,\n",
+    "    lanes_per_snake=5,\n",
+    "    trench_spacing=2.1,\n",
+    ")\n",
+    "workhorse_poormedia = dict(\n",
+    "    feeding_channel_width=90,\n",
+    "    trench_width=1.2,\n",
+    "    trench_gap=30,\n",
+    "    lanes_per_snake=5,\n",
+    "    trench_spacing=2.1,\n",
+    ")\n",
+    "\n",
+    "params = [dense_chip, workhorse, workhorse, workhorse, workhorse_poormedia, dense_chip]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
     "# chip names\n",
     "chip_names = [\n",
@@ -239,7 +227,7 @@
     "        if np.isscalar(p[\"split\"])\n",
     "        else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
     "        reg=f\" M{p.get('mark_size')} ID{p.get('chip_id')}\"\n",
-    "        if p.get(\"registration_marks\")\n",
+    "        if p.get(\"registration_mark_barcodes\")\n",
     "        else \"\",\n",
     "        **p,\n",
     "    )\n",
@@ -249,7 +237,7 @@
     "chips = [s.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
     "grid_metadata = {}\n",
-    "draw_grid = True\n",
+    "draw_grid = False\n",
     "for chip_name, chip in zip(chip_names, chips):\n",
     "    chip_grid_metadata = fov.get_grid_metadata(fov_dims, metadata[chip_name])\n",
     "    grid_metadata[chip_name] = chip_grid_metadata\n",
@@ -260,7 +248,7 @@
     "            fov_dims,\n",
     "            chip_grid_metadata,\n",
     "            center_margins=True,\n",
-    "            rotate=False,\n",
+    "            rotate=True,\n",
     "        )\n",
     "grid_df = pd.concat(\n",
     "    {\n",
@@ -273,7 +261,7 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 210304\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 210307\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
@@ -281,7 +269,7 @@
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     "    alignment_mark_position=40e3,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/210304basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/210307basilisk.gds\")"
    ]
   },
   {
