[cloning,shenker/cloning] Fixed circularization after DsSeqRecord.assemble. Circularizes if junction is non-zero-length, so no blunt-end ligations (this was the problem previously, that every blunt-end sequence was getting circularized). Can get this behavior without assembling any other sequences by passing None as the second sequence to DsSeqRecord.assemble. Not well tested, but seems to work.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210223 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210223 3G.ipynb
@@ -39,7 +39,8 @@
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
-    "import paulssonlab.cloning.commands as commands\n",
+    "import paulssonlab.cloning.commands.semantics as cmd_semantics\n",
+    "import paulssonlab.cloning.commands.parser as cmd_parser\n",
     "import paulssonlab.api.benchling as benchling"
    ]
   },
@@ -119,33 +120,6 @@
    "outputs": [],
    "source": [
     "reg.registry"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Correctness verification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = reg.get(\"\")\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"/Users/jacob/Downloads/test.gb\", \"w\") as f:\n",
-    "    f.write(x.format(\"gb\"))"
    ]
   },
   {
@@ -255,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GG test"
+    "# Circularization test"
    ]
   },
   {
@@ -264,7 +238,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_seqs = [reg.get(f\"pLIB{plib}\")[\"_seq\"] for plib in (1, 82, 23, 95, 110)]"
+    "a = sequence.DsSeqRecord(\n",
+    "    \"abcdxxxx\" + \"a\" * 20 + \"g\" * 20 + \"zabcdxxxx\",\n",
+    "    upstream_overhang=-7,\n",
+    "    downstream_overhang=14,\n",
+    ")\n",
+    "a"
    ]
   },
   {
@@ -273,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_digests = [workflow.re_digest_part(seq, Restriction.BsaI) for seq in test_seqs]"
+    "sequence._assemble_gibson(a, a, max_overlap=40)"
    ]
   },
   {
@@ -282,8 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for seq in test_digests:\n",
-    "    print(seq)"
+    "sequence._assemble_gibson(a, None)"
    ]
   },
   {
@@ -292,8 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assembly = sequence.assemble(test_digests)\n",
-    "print(assembly)"
+    "a.assemble(None, method=\"gibson\")"
    ]
   },
   {
@@ -302,7 +279,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.get(\"oLIB85\")"
+    "b = sequence.DsSeqRecord(\n",
+    "    \"abcdxxxx\" + \"a\" * 20 + \"g\" * 20 + \"zabcd\",\n",
+    "    upstream_overhang=-4,\n",
+    "    downstream_overhang=4,\n",
+    ")\n",
+    "b"
    ]
   },
   {
@@ -311,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.clear_cache()"
+    "print(_)"
    ]
   },
   {
@@ -320,8 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = reg.get(\"UNS1_A\")\n",
-    "x"
+    "b.assemble(None, method=\"goldengate\")"
    ]
   },
   {
@@ -330,61 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x[\"_seq\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(assembly.circularize())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"/Users/jacob/Downloads/test3.gb\", \"w\") as f:\n",
-    "    f.write(assembly.format(\"gb\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Gibson test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s1 = \"TACTAGAGACCTACTAGTAGCGGCCGCTGCAGGCaaaaaaaaaaaa\"\n",
-    "s2 = \"aaaaaaaaaaaaGGAGAGAGACCTGCACCATATGCGGTGAGACTAG\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gibson two GG'ed TUs\n",
-    "# check we can PCR UNSes onto JUMP vector\n",
-    "# check we can circularize a real 3G rxn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3G"
+    "print(_)"
    ]
   },
   {
@@ -530,23 +457,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def eval_command(cmd, registry, context=None):\n",
-    "    ctx = CommandContext(registry, context)\n",
-    "    return commands.command_parser.parse(cmd, semantics=CommandSemantics(cmds, ctx))\n",
-    "\n",
-    "\n",
-    "res = eval_command(command, reg, context=\"pLIB\")\n",
-    "print(dissoc(res, \"_command\"))\n",
-    "print(res[\"_command\"])\n",
-    "unparse_command(res[\"_command\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -566,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
