[sigma_circuits] Noah analysis code

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210329 Analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210329 Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caring-luxury",
+   "id": "impaired-speaker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fuzzy-macro",
+   "id": "whole-implementation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulation-operation",
+   "id": "surface-james",
    "metadata": {},
    "source": [
     "# Load data"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "successful-american",
+   "id": "quick-sacramento",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "backed-beginning",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329flippedpwm4.pickle\"\n",
+    "data = pickle.load(open(filename, \"rb\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "wicked-connectivity",
+   "id": "ongoing-regular",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -56,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extraordinary-incidence",
+   "id": "chinese-excerpt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "determined-click",
+   "id": "closed-generic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corporate-arlington",
+   "id": "regulated-villa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "friendly-novelty",
+   "id": "guilty-ethernet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +111,139 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aerial-roman",
+   "id": "incoming-technical",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "breeding-utilization",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.stats import mad_std, sigma_clip\n",
+    "\n",
+    "m_int = data[\n",
+    "    data[\"area\"].between(100, 450) & data[\"mean_intensity\"].between(100, 5000)\n",
+    "][\"mean_intensity\"].loc[[16, 53, 63, 95, 123, 149]]\n",
+    "dslice = m_int.groupby([\"pos\", \"t\"]).apply(\n",
+    "    lambda y: sigma_clip(y, sigma=2, maxiters=10, masked=False)\n",
+    ")\n",
+    "mf = dslice.apply(np.mean)\n",
+    "\n",
+    "sf = dslice.apply(np.std)\n",
+    "\n",
+    "r = pd.DataFrame({\"stdm\": mf - sf, \"stdp\": mf + sf})\n",
+    "means = mf.reset_index().hvplot.line(\"t\", \"mean_intensity\", by=\"pos\", logy=True)\n",
+    "errors = r.hvplot.area(\n",
+    "    x=\"t\", y=\"stdm\", y2=\"stdp\", by=\"pos\", stacked=False, alpha=0.2, logy=True\n",
+    ").opts(width=1000, height=500)\n",
+    "IPTG_starts = (\n",
+    "    hv.VLine(12).opts(alpha=0.5, color=\"blue\")\n",
+    "    * hv.VLine(60).opts(alpha=0.5, color=\"blue\")\n",
+    "    * hv.VLine(108).opts(alpha=0.5, color=\"blue\")\n",
+    "    * hv.VLine(156).opts(alpha=0.5, color=\"blue\")\n",
+    ")\n",
+    "EZ_starts = (\n",
+    "    hv.VLine(30).opts(alpha=0.5, color=\"grey\")\n",
+    "    * hv.VLine(78).opts(alpha=0.5, color=\"grey\")\n",
+    "    * hv.VLine(126).opts(alpha=0.5, color=\"grey\")\n",
+    "    * hv.VLine(174).opts(alpha=0.5, color=\"grey\")\n",
+    ")\n",
+    "aTc_starts = (\n",
+    "    hv.VLine(42).opts(alpha=0.5, color=\"red\")\n",
+    "    * hv.VLine(90).opts(alpha=0.5, color=\"red\")\n",
+    "    * hv.VLine(138).opts(alpha=0.5, color=\"red\")\n",
+    "    * hv.VLine(186).opts(alpha=0.5, color=\"red\")\n",
+    ")\n",
+    "\n",
+    "means * errors * IPTG_starts * EZ_starts * aTc_starts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "residential-processing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rlabels = [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\"]\n",
+    "\n",
+    "\n",
+    "def rgroup(pos):\n",
+    "    return rlabels[int(np.floor(pos / 20))]\n",
+    "\n",
+    "\n",
+    "df = data.reset_index()\n",
+    "df[\"pos\"] = df[\"pos\"].apply(rgroup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bright-tissue",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from astropy.stats import mad_std, sigma_clip\n",
+    "\n",
+    "m_int = df[\n",
+    "    df[\"area\"].between(300, 1500)\n",
+    "    & df[\"GFP-PENTA\"].between(100, 5000)\n",
+    "    & df[\"pos\"].isin([\"A\", \"C\", \"D\", \"E\", \"G\", \"H\"])\n",
+    "][[\"GFP-PENTA\", \"pos\", \"t\"]]\n",
+    "dslice = m_int.groupby([\"pos\", \"t\"]).apply(\n",
+    "    lambda y: sigma_clip(y, sigma=2, maxiters=10, masked=False)\n",
+    ")\n",
+    "mf = dslice.apply(np.mean)\n",
+    "sf = dslice.apply(np.std)\n",
+    "\n",
+    "r = pd.DataFrame({\"stdm\": mf - sf, \"stdp\": mf + sf})\n",
+    "means = mf.hvplot.line(\"t\", by=\"pos\", logy=True)\n",
+    "errors = r.hvplot.area(\n",
+    "    x=\"t\", y=\"stdm\", y2=\"stdp\", by=\"pos\", stacked=False, alpha=0.2, logy=True\n",
+    ")\n",
+    "\n",
+    "line_alpha = 0.2\n",
+    "IPTG_starts = (\n",
+    "    hv.VLine(12).opts(alpha=line_alpha, color=\"blue\")\n",
+    "    * hv.VLine(60).opts(alpha=line_alpha, color=\"blue\")\n",
+    "    * hv.VLine(108).opts(alpha=line_alpha, color=\"blue\")\n",
+    "    * hv.VLine(156).opts(alpha=line_alpha, color=\"blue\")\n",
+    ")\n",
+    "EZ_starts = (\n",
+    "    hv.VLine(30).opts(alpha=line_alpha, color=\"grey\")\n",
+    "    * hv.VLine(78).opts(alpha=line_alpha, color=\"grey\")\n",
+    "    * hv.VLine(126).opts(alpha=line_alpha, color=\"grey\")\n",
+    "    * hv.VLine(174).opts(alpha=line_alpha, color=\"grey\")\n",
+    ")\n",
+    "aTc_starts = (\n",
+    "    hv.VLine(42).opts(alpha=line_alpha, color=\"red\")\n",
+    "    * hv.VLine(90).opts(alpha=line_alpha, color=\"red\")\n",
+    "    * hv.VLine(138).opts(alpha=line_alpha, color=\"red\")\n",
+    "    * hv.VLine(186).opts(alpha=line_alpha, color=\"red\")\n",
+    ")\n",
+    "\n",
+    "# (IPTG_starts*EZ_starts*aTc_starts*means*errors).opts(width=1000,height=400)\n",
+    "(means * errors).opts(width=1000, height=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "crucial-string",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "historic-encyclopedia",
    "metadata": {},
    "outputs": [],
    "source": []
