[sigma_circuits] As used on 210329 to segment pSC101 flipped and non-flipped bistable SigW circuits.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210329 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210329 Segmentation.ipynb
@@ -56,9 +56,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from segmentation import *\n",
-    "# from util import *\n",
-    "# from matriarch_stub import *\n",
     "import paulssonlab.projects.sigma_circuits.segmentation as segmentation\n",
     "import paulssonlab.projects.sigma_circuits.matriarch_stub as matriarch_stub"
    ]
@@ -86,11 +83,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dask.config.config['distributed']['scheduler']['allowed-failures'] = 20\n",
-    "# dask.config.config['distributed']['worker']['memory'] = {'target': 0.4,\n",
-    "#                                                         'spill': 0.5,\n",
-    "#                                                         'pause': 0.9,\n",
-    "#                                                         'terminate': 0.95}"
+    "dask.config.config[\"distributed\"][\"scheduler\"][\"allowed-failures\"] = 6\n",
+    "dask.config.config[\"distributed\"][\"worker\"][\"memory\"] = {\n",
+    "    \"target\": 0.7,\n",
+    "    \"spill\": 0.8,\n",
+    "    \"pause\": 0.9,\n",
+    "    \"terminate\": 0.95,\n",
+    "}"
    ]
   },
   {
@@ -111,7 +110,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"00:30:00\",\n",
+    "    walltime=\"05:00:00\",\n",
     "    memory=\"6GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/projects/paulssonlab/paulssonlab/src/paulssonlab/projects/sigma_circuits/log\",\n",
@@ -129,6 +128,15 @@
    "outputs": [],
    "source": [
     "cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.restart()"
    ]
   },
   {
@@ -165,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "good_positions2 = (good_positions + np.arange(4)[:, np.newaxis]).T.reshape(-1)"
+    "good_positions2 = (good_positions + np.arange(8)[:, np.newaxis]).T.reshape(-1)"
    ]
   },
   {
@@ -183,7 +191,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210324/PWM_flipped.nd2\""
+    "nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210324/PWM_flipped.nd2\"\n",
+    "# nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210204/psc101_bistable.nd2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matriarch_stub.get_nd2_reader(nd2_filename).sizes"
    ]
   },
   {
@@ -194,7 +212,7 @@
    "source": [
     "%%time\n",
     "data_graph = segmentation.process(\n",
-    "    nd2_filename, time_slice=slice(None), position_slice=good_positions2, delayed=True\n",
+    "    nd2_filename, time_slice=slice(None), position_slice=slice(None), delayed=True\n",
     ")"
    ]
   },
@@ -205,7 +223,75 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "data_future = client.compute(data_graph)"
+    "# split up computes so we can gather results from multiple workers\n",
+    "# (otherwise the single worker assembling the dict will run out of memory)\n",
+    "# TODO: use recursive_map(..., levels=?)\n",
+    "# TODO: why doesn't the second-level compute work but the first-level does?\n",
+    "# (segment only gets run after all frames are loaded into memory)\n",
+    "# data_futures = {\n",
+    "#     k: {k2: client.compute(v2) for k2, v2 in v.items()} for k, v in data_graph.items()\n",
+    "# }\n",
+    "data_futures = {k: client.compute(v) for k, v in data_graph.items()}\n",
+    "# data_futures = client.compute(data_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del data_futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: only gather non-failed futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stored.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "103 not in stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stored = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in data_futures.items():\n",
+    "    print(k)\n",
+    "    if k in (104, 115):\n",
+    "        continue\n",
+    "    if k not in stored:\n",
+    "        stored[k] = client.gather(v)"
    ]
   },
   {
@@ -215,7 +301,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "data = client.gather(data_future)"
+    "dfs = client.gather(data_futures)"
    ]
   },
   {
@@ -224,7 +310,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.info(memory_usage=\"full\")"
+    "dfs = stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "failed_pos = {k for k, v in dfs.items() if any(v2 is None for v2 in v.values())}\n",
+    "failed_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat(\n",
+    "    {\n",
+    "        k: pd.concat({k2: v2 for k2, v2 in v.items() if v2 is not None}, names=[\"t\"])\n",
+    "        for k, v in dfs.items()\n",
+    "    },\n",
+    "    names=[\"pos\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info(memory_usage=\"full\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"table\": df}"
    ]
   },
   {
@@ -240,10 +378,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329flippedpwm3.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210324flipped.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
