[sigma_circuits] Added metadata and mux log to pickle outputs of segmentation. Ran into problems reading acquisition times from ND2 files, I do not think NIS Elements is saving them correctly.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210330 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210330 Segmentation.ipynb
@@ -26,6 +26,7 @@
     "from dask_jobqueue import SLURMCluster\n",
     "from cytoolz import partial, compose, juxt\n",
     "from itertools import repeat\n",
+    "from pathlib import Path\n",
     "from glob import glob\n",
     "\n",
     "# import cachetools\n",
@@ -57,7 +58,9 @@
    "outputs": [],
    "source": [
     "import paulssonlab.projects.sigma_circuits.segmentation as segmentation\n",
-    "import paulssonlab.projects.sigma_circuits.matriarch_stub as matriarch_stub"
+    "import paulssonlab.projects.sigma_circuits.matriarch_stub as matriarch_stub\n",
+    "import paulssonlab.projects.sigma_circuits.experiment as experiment\n",
+    "import paulssonlab.io.metadata as metadata"
    ]
   },
   {
@@ -192,7 +195,8 @@
    "outputs": [],
    "source": [
     "nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210324/PWM_flipped.nd2\"\n",
-    "# nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210204/psc101_bistable.nd2\""
+    "# nd2_filename = \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210204/psc101_bistable.nd2\"\n",
+    "nd2 = matriarch_stub.get_nd2_reader(nd2_filename)"
    ]
   },
   {
@@ -201,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matriarch_stub.get_nd2_reader(nd2_filename).sizes"
+    "nd2.sizes"
    ]
   },
   {
@@ -362,7 +366,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\"table\": df}"
+    "mux_log = experiment.parse_mux_log(Path(nd2_filename).parent / \"mux.log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md = metadata.parse_nd2_metadata(nd2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"table\": df, \"metadata\": md, \"mux_log\": mux_log}"
    ]
   },
   {
@@ -383,13 +405,6 @@
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
